is_valid, insert_knot, rebase, Param, mult, travis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,4 @@ authors = [" <arun.sivaramakrishnan@gmail.com>"]
 
 [dependencies]
 simd = { git = "https://github.com/huonw/simd" }
+itertools = { git = "https://github.com/bluss/rust-itertools" }
