use nalgebra vector and point types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 authors = [" <arun.sivaramakrishnan@gmail.com>"]
 
 [dependencies]
-simd = { git = "https://github.com/huonw/simd" }
 itertools = { git = "https://github.com/bluss/rust-itertools" }
 la= "0.2.0"
+nalgebra="0.10.*"
