--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = [" <arun.sivaramakrishnan@gmail.com>"]
 itertools = { git = "https://github.com/bluss/rust-itertools" }
 la= "0.2.0"
 nalgebra="0.10.*"
+either="1.0.2"
